# Warehouse_Simulation

./: README.md  Readme.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/scuttle_description_ros2/share/scuttle_description_ros2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
maps/: keepout_mask.pgm  keepout_mask.yaml  scuttle_slam_map.pgm  scuttle_slam_map.yaml
src/scuttle_description_ros2/: CMakeLists.txt  package.xml
src/scuttle_description_ros2/config/: camera_slider_controller.yaml
src/scuttle_description_ros2/urdf/: scuttle.gazebo  scuttle.trans  scuttle.urdf  scuttle.urdf.backup_plugins  scuttle.urdf.xacro  scuttle.urdf.xacro.backup  scuttle.xacro
src/scuttle_gazebo_ros2/: CMakeLists.txt
src/scuttle_gazebo_ros2/launch/: empty_world_launch.py  keepout_filter.launch.py  robot_state_publisher.launch.py  slam_navigation.launch.py  warehouse_launch.py
src/scuttle_gazebo_ros2/models/box_with_text/: model.config  model.sdf
src/scuttle_gazebo_ros2/models/dynamic_world/: model.config
src/scuttle_gazebo_ros2/models/experiment_rooms/: model.config
src/scuttle_gazebo_ros2/models/rack/: model.config  model.sdf  rack.stl
src/scuttle_gazebo_ros2/models/shelf_with_qr/: model.config  model.sdf
src/scuttle_gazebo_ros2/models/warehouse/: model.config  model.sdf
src/scuttle_gazebo_ros2/worlds/: warehouse.world
src/scuttle_navigation2/: CMakeLists.txt
src/scuttle_navigation2/config/: mapper_params_online_async.yaml  nav2_params.yaml  nav2_params_competition.yaml  nav2_scuttle.rviz
src/scuttle_navigation2/launch/: competition_nodes_only.launch.py  geotag_recorder.py  localization_keepout_launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  warehouse_mission.launch.py  waypoint_navigator.py
src/scuttle_navigation2/scripts/: competition_server.py  competition_waypoint_navigator.py  emergency_stop.py  interactive_waypoint_recorder.py  obstacle_speed_controller.py  qr_code_scanner.py  vertical_scanner.py  waypoint_validator.py  wifi_monitor.py
src/scuttle_navigation2/scripts/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/scuttle_navigation2/scripts/log/: latest_build
(+144 files in other folders)
